Fix maven publishing method for auto-publish (#726)
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>